--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "ngx-toastr": "^15.2.1",
     "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
