--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@capacitor/android": "^4.4.0",
+    "@capacitor/cli": "^4.4.0",
+    "@capacitor/core": "^4.4.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "ngx-toastr": "^15.2.1",
