--- a/front/angular.json
+++ b/front/angular.json
@@ -92,6 +92,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/bootstrap/fonts/icons/bootstrap-icons.css",
               "src/styles.css"
             ],
             "scripts": [
