--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@capacitor/cli": "^4.4.0",
     "@capacitor/core": "^4.4.0",
     "bootstrap": "^4.1.3",
+    "bootstrap-icons": "^1.9.1",
     "jquery": "^3.3.1",
     "ngx-toastr": "^15.2.1",
     "popper.js": "^1.14.3",
