--- a/api/gerador.relatorio/src/main/resources/application.properties
+++ b/api/gerador.relatorio/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/db_testes
+spring.datasource.username=root
+spring.datasource.password=
