--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@capacitor/android": "^4.4.0",
+    "@capacitor/angular": "^2.0.3",
     "@capacitor/cli": "^4.4.0",
     "@capacitor/core": "^4.4.0",
     "bootstrap": "^4.1.3",
@@ -43,6 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "@capacitor/cli": "latest"
   }
 }
