--- a/front/package.json
+++ b/front/package.json
@@ -26,17 +26,21 @@
     "@capacitor/core": "^4.4.0",
     "bootstrap": "^4.1.3",
     "bootstrap-icons": "^1.9.1",
+    "file-saver": "^2.0.5",
     "jquery": "^3.3.1",
+    "json-as-xlsx": "^2.4.6",
     "ngx-toastr": "^15.2.1",
     "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.4",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
+    "@capacitor/cli": "latest",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
@@ -44,7 +48,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2",
-    "@capacitor/cli": "latest"
+    "typescript": "~4.7.2"
   }
 }
