--- a/api/gerar.relatorios/bin/src/main/resources/application.properties
+++ b/api/gerar.relatorios/bin/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-
-server.port=8081
-#spring.datasource.url=jdbc:mysql://localhost:3306/db_testes
+#server.port=8080
+#spring.datasource.url=jdbc:mysql://localhost:3306/cursos
 #spring.datasource.username=root
-#spring.datasource.password=
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+#spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://b234625cbc2a7b:ad52cdd8@us-cdbr-east-04.cleardb.com/heroku_89e9b1dee66ab79?reconnect=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
