--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "@capacitor/angular": "^2.0.3",
     "@capacitor/cli": "^4.4.0",
     "@capacitor/core": "^4.4.0",
+    "@capacitor/network": "^4.0.1",
     "bootstrap": "^4.1.3",
     "bootstrap-icons": "^1.9.1",
     "file-saver": "^2.0.5",
